<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_project"
        android:enabled="true"
        android:icon="@drawable/tab_project"
        app:showAsAction="ifRoom"
        android:title="@string/main_project" />

    <item
        android:id="@+id/action_function"
        android:enabled="true"
        android:icon="@drawable/tab_function"
        app:showAsAction="ifRoom"
        android:title="@string/main_function" />

    <item
        android:id="@+id/action_share"
        android:enabled="true"
        android:icon="@drawable/tab_share"
        app:showAsAction="ifRoom"
        android:title="@string/main_share" />

<!--    <item-->
<!--        android:id="@+id/action_history"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/tab_history"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:title="@string/main_history" />-->

    <item
        android:id="@+id/action_post"
        android:enabled="true"
        android:icon="@drawable/tab_post"
        app:showAsAction="ifRoom"
        android:title="@string/main_post" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/tab_profile"
        app:showAsAction="ifRoom"
        android:title="@string/main_profile" />
</menu>