<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorFrgBack"
    tools:context=".activity.GuideActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        app:title="@string/guide_title"
        app:titleTextColor="@color/colorMainWhite"
        app:navigationIcon="@drawable/ic_left_white"
        android:theme="@style/ToolbarTheme"
        android:elevation="5dp" />

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/lbl_content.black"
                    android:text="@string/guide_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_name_rule"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/lbl_content.black"
                    android:text="@string/guide_function"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_funtion_rule_01"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_function_rule_02"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/lbl_content.black"
                    android:text="@string/guide_alogrithm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_01"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_02"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_03"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_04"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_05"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_06"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_07"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_08"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_09"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_11"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_12"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="30dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_algorithm_rule_13"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/lbl_content.black"
                    android:text="@string/guide_calculate"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_calculate_rule_01"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_calculate_rule_02"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:text="@string/guide_calculate_rule_03"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/guide_algorithm_rule_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    style="@style/lbl_detail.black"
                    android:alpha="0.7"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/guide_algorithm_rule_15"
                    android:onClick="onClickLblSupport"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    
</LinearLayout>