<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorFrgBack"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_left_white"
        app:title="@string/guide_func_title"
        app:titleTextColor="@color/colorMainWhite"
        android:background="@color/colorMainGreen"
        android:theme="@style/ToolbarTheme"/>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/lbl_processing.doing"
            android:text="1"/>

        <LinearLayout
            style="@style/llt_spec_line"/>

        <TextView
            style="@style/lbl_processing.will"
            android:text="2"/>

        <LinearLayout
            style="@style/llt_spec_line"/>
        <TextView
            style="@style/lbl_processing.will"
            android:text="3"/>

        <LinearLayout
            style="@style/llt_spec_line"/>

        <TextView
            style="@style/lbl_processing.will"
            android:text="4"/>

        <LinearLayout
            style="@style/llt_spec_line"/>

        <TextView
            style="@style/lbl_processing.will"
            android:text="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/lbl_content.black"
                android:text="@string/guide_step1_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                style="@style/lbl_detail.black"
                android:text="@string/guide_step1_desc1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                style="@style/lbl_detail.black"
                android:text="@string/guide_step1_desc2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                style="@style/lbl_detail.black"
                android:text="@string/guide_step1_desc3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/lbl_content.black"
                android:text="@string/guide_step2_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/lbl_content.black"
                android:text="@string/guide_step3_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/lbl_content.black"
                android:text="@string/guide_step4_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/lbl_content.black"
                android:text="@string/guide_step5_title"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_gfunc_next"
            android:text="@string/common_next"
            style="@style/mb_back.green"/>
    </LinearLayout>

</LinearLayout>
