<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_12"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/dig_down_title"
            style="@style/lbl_black_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTextBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="360dp">

        <LinearLayout
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/dig_down_content"
                android:lineSpacingExtra="5dp"
                style="@style/lbl_content.black" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_dialog_privacy"
                    style="@style/lbl_content.blue.14"
                    android:text="@string/dig_privacy_policy"/>

                <TextView
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    style="@style/lbl_content.black"
                    android:text="@string/login_or"/>

                <TextView
                    android:id="@+id/txt_dialog_agreement"
                    style="@style/lbl_content.blue.14"
                    android:text="@string/dig_user_agreement"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/dialog_download_user"
                        android:text="@string/common_agree"
                        style="@style/mb_back.green"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/dialog_download_cancel"
                        android:text="@string/common_reject"
                        style="@style/mb_back.red" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>